# murundiri

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/config/: config.rs  constructs.rs  errors.rs  json.rs  mod.rs  url_regex.rs
src/proxy/: errors.rs  mod.rs  resolver.rs  server.rs
src/utils/: config_validator.rs  json.rs  macros.rs  mod.rs
tests/: parse_config.rs
tests/data/: config.yml
