[package]
name = "murundiri"
version = "0.1.0"
authors = ["Tochukwu Nkemdilim <nkemdilimtochukwu@gmail.com>"]
edition = "2018"

[dependencies]
serde_yaml = "0.8.11"
serde = {version = "1.0.104", features = ["derive"] }
regex = "1.3.4"
serde_json = "1.0.48"
itertools = "0.8.2"
hyper-reverse-proxy = "0.4"
hyper = "0.13.3"
futures = "0.3.4"