[package]
name = "murundiri"
version = "0.1.0"
authors = ["Tochukwu Nkemdilim <nkemdilimtochukwu@gmail.com>"]
edition = "2018"

[dependencies]
serde_yaml = "0.8.11"
serde = {version = "1.0.104", features = ["derive"] }
serde_regex = "1.1.0"
serde_derive = "1.0.114"
serde_json = "1.0.48"
hyper = "0.14.12"
hyper-reverse-proxy = { git = "https://github.com/felipenoris/hyper-reverse-proxy.git" }
regex = "1.3.4"
redis = { version = "0.17.0", features = [ "cluster", "r2d2"] }
r2d2 = "0.8.8"
dotenv = "0.15.0"
clap = "3.0.0-beta.1"
portpicker = "0.1.0"
tokio = { version = "0.2", features = ["full"] }
